alterando MOVIEPAST para GARCIAFLIX

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Novidade! Atalhos do teclado … Os atalhos de teclado do Drive foram atualizado
 
 <head>
     <link rel=" stylesheet" href="style.css" />
-    <title>MOVIEPAST</title>
+    <title>GARCIAFLIX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@ Novidade! Atalhos do teclado … Os atalhos de teclado do Drive foram atualizado
 
 <body>
 
-    <header>MOVIEPAST</header>
+    <header>GARCIAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
